--- a/package.json
+++ b/package.json
@@ -12,10 +12,16 @@
   "dependencies": {
     "@expo/webpack-config": "^0.17.2",
     "expo": "~47.0.12",
+    "expo-constants": "~14.0.2",
+    "expo-location": "~15.0.1",
     "expo-status-bar": "~1.4.2",
     "react": "18.1.0",
     "react-dom": "18.1.0",
     "react-native": "0.70.5",
+    "react-native-google-places-autocomplete": "^2.5.1",
+    "react-native-maps": "1.3.2",
+    "react-native-maps-directions": "^1.9.0",
+    "react-native-vector-icons": "^9.2.0",
     "react-native-web": "~0.18.9"
   },
   "devDependencies": {
