--- a/package.json
+++ b/package.json
@@ -1,11 +1,10 @@
 {
   "name": "dongnaitravelapp",
   "version": "1.0.0",
-  "main": "node_modules/expo/AppEntry.js",
   "scripts": {
-    "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "start": "expo start --dev-client",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web",
     "lint": "eslint --ext .js,.jsx ./"
   },
@@ -13,16 +12,23 @@
     "@expo/webpack-config": "^0.17.2",
     "@gorhom/bottom-sheet": "^4",
     "@react-native-async-storage/async-storage": "~1.17.3",
+    "@react-native-google-signin/google-signin": "^9.0.2",
     "@react-navigation/bottom-tabs": "^6.5.4",
     "@react-navigation/native": "^6.1.3",
     "@react-navigation/native-stack": "^6.9.8",
     "@reduxjs/toolkit": "^1.9.2",
     "axios": "^1.2.6",
     "expo": "~47.0.12",
+    "expo-auth-session": "~3.8.0",
     "expo-constants": "~14.0.2",
+    "expo-random": "~13.0.0",
     "expo-secure-store": "~12.0.0",
+    "expo-splash-screen": "~0.17.5",
     "expo-status-bar": "~1.4.2",
-    "expo-updates": "^0.15.6",
+    "expo-system-ui": "~2.0.1",
+    "expo-updates": "~0.15.6",
+    "expo-web-browser": "~12.0.0",
+    "lottie-react-native": "5.1.4",
     "react": "18.1.0",
     "react-dom": "18.1.0",
     "react-hook-form": "^7.43.0",
