--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "expo-secure-store": "~12.0.0",
     "expo-status-bar": "~1.4.2",
     "expo-updates": "^0.15.6",
+    "lottie-react-native": "^5.1.4",
     "react": "18.1.0",
     "react-dom": "18.1.0",
     "react-hook-form": "^7.43.0",
