--- a/package.json
+++ b/package.json
@@ -18,17 +18,20 @@
     "@react-navigation/native-stack": "^6.9.8",
     "@reduxjs/toolkit": "^1.9.2",
     "axios": "^1.2.6",
+    "crypto-js": "^4.1.1",
     "expo": "~47.0.12",
     "expo-constants": "~14.0.2",
     "expo-secure-store": "~12.0.0",
     "expo-status-bar": "~1.4.2",
     "expo-updates": "^0.15.6",
+    "lodash": "^4.17.21",
     "lottie-react-native": "^5.1.4",
     "react": "18.1.0",
     "react-dom": "18.1.0",
     "react-hook-form": "^7.43.0",
     "react-native": "0.70.5",
     "react-native-checkbox-reanimated": "^0.1.1",
+    "react-native-crypto-js": "^1.0.0",
     "react-native-floating-label-input": "^1.4.2",
     "react-native-gesture-handler": "~2.8.0",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
