--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react-dom": "18.1.0",
     "react-hook-form": "^7.43.0",
     "react-native": "0.70.5",
+    "react-native-app-intro-slider": "^4.0.4",
     "react-native-checkbox-reanimated": "^0.1.1",
     "react-native-crypto-js": "^1.0.0",
     "react-native-extra-dimensions-android": "^1.2.5",
