--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "date-fns": "^2.29.3",
     "expo": "~47.0.12",
     "expo-constants": "~14.0.2",
+    "expo-location": "^15.0.1",
     "expo-secure-store": "~12.0.0",
     "expo-status-bar": "~1.4.2",
     "expo-updates": "^0.15.6",
@@ -39,7 +40,10 @@
     "react-native-extra-dimensions-android": "^1.2.5",
     "react-native-floating-label-input": "^1.4.2",
     "react-native-gesture-handler": "~2.8.0",
+    "react-native-google-places-autocomplete": "^2.5.1",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
+    "react-native-maps": "1.3.2",
+    "react-native-maps-directions": "^1.9.0",
     "react-native-modal": "^13.0.1",
     "react-native-reanimated": "~2.12.0",
     "react-native-safe-area-context": "4.4.1",
