--- a/package.json
+++ b/package.json
@@ -37,8 +37,10 @@
     "react-native-checkbox-reanimated": "^0.1.1",
     "react-native-crypto-js": "^1.0.0",
     "react-native-extra-dimensions-android": "^1.2.5",
+    "react-native-fast-image": "^8.6.3",
     "react-native-floating-label-input": "^1.4.2",
     "react-native-gesture-handler": "~2.8.0",
+    "react-native-image-modal": "^1.0.16",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-modal": "^13.0.1",
     "react-native-reanimated": "~2.12.0",
