Get palce details

--- a/package.json
+++ b/package.json
@@ -19,11 +19,12 @@
     "@react-navigation/native-stack": "^6.9.8",
     "@reduxjs/toolkit": "^1.9.2",
     "axios": "^1.2.6",
+    "buffer": "^6.0.3",
     "crypto-js": "^4.1.1",
     "date-fns": "^2.29.3",
     "expo": "~47.0.12",
     "expo-constants": "~14.0.2",
-    "expo-location": "^15.0.1",
+    "expo-location": "~15.0.1",
     "expo-secure-store": "~12.0.0",
     "expo-status-bar": "~1.4.2",
     "expo-updates": "^0.15.6",
