--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "date-fns": "^2.29.3",
     "expo": "~47.0.12",
     "expo-constants": "~14.0.2",
+    "expo-image-picker": "~14.0.2",
     "expo-secure-store": "~12.0.0",
     "expo-status-bar": "~1.4.2",
     "expo-updates": "^0.15.6",
@@ -41,6 +42,8 @@
     "react-native-floating-label-input": "^1.4.2",
     "react-native-gesture-handler": "~2.8.0",
     "react-native-image-modal": "^1.0.16",
+    "react-native-image-picker": "^5.1.0",
+    "react-native-image-view": "^2.1.9",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-modal": "^13.0.1",
     "react-native-reanimated": "~2.12.0",
