--- a/package.json
+++ b/package.json
@@ -24,18 +24,24 @@
     "crypto-js": "^4.1.1",
     "date-fns": "^2.29.3",
     "expo": "~47.0.12",
+    "expo-av": "~13.0.3",
     "expo-constants": "~14.0.2",
+    "expo-file-system": "~15.1.1",
     "expo-location": "~15.0.1",
+    "expo-permissions": "~14.0.0",
     "expo-secure-store": "~12.0.0",
     "expo-status-bar": "~1.4.2",
     "expo-updates": "^0.15.6",
+    "html-entities": "^2.3.3",
     "lodash": "^4.17.21",
     "lottie-react-native": "^5.1.4",
     "moment": "^2.29.4",
+    "openrouteservice-js": "^0.2.0",
     "react": "18.1.0",
     "react-dom": "18.1.0",
     "react-hook-form": "^7.43.0",
     "react-native": "0.70.5",
+    "react-native-animatable": "^1.3.3",
     "react-native-app-intro-slider": "^4.0.4",
     "react-native-checkbox-reanimated": "^0.1.1",
     "react-native-crypto-js": "^1.0.0",
@@ -48,13 +54,17 @@
     "react-native-maps-directions": "^1.9.0",
     "react-native-modal": "^13.0.1",
     "react-native-reanimated": "~2.12.0",
+    "react-native-render-html": "^6.3.4",
     "react-native-safe-area-context": "4.4.1",
     "react-native-screens": "~3.18.0",
     "react-native-svg": "13.4.0",
+    "react-native-toast-notifications": "^3.3.1",
     "react-native-vector-icons": "^9.2.0",
     "react-native-web": "~0.18.9",
     "react-redux": "^8.0.5",
-    "redux-persist": "^6.0.0"
+    "redux-persist": "^6.0.0",
+    "socket.io-client": "^4.6.1",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
