--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "react-native-app-intro-slider": "^4.0.4",
     "react-native-checkbox-reanimated": "^0.1.1",
     "react-native-crypto-js": "^1.0.0",
+    "react-native-dropdown-picker": "^5.4.4",
     "react-native-extra-dimensions-android": "^1.2.5",
     "react-native-fast-image": "^8.6.3",
     "react-native-floating-label-input": "^1.4.2",
