unfinish state mode anh any process

--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   "dependencies": {
     "@expo/webpack-config": "^0.17.2",
     "@gorhom/bottom-sheet": "^4",
-    "@react-native-async-storage/async-storage": "~1.17.3",
+    "@react-native-async-storage/async-storage": "github:react-native-async-storage/async-storage",
     "@react-native-community/datetimepicker": "6.5.2",
     "@react-navigation/bottom-tabs": "^6.5.4",
     "@react-navigation/native": "^6.1.3",
@@ -43,8 +43,9 @@
     "react-native-floating-label-input": "^1.4.2",
     "react-native-gesture-handler": "~2.8.0",
     "react-native-image-modal": "^1.0.16",
-    "react-native-image-picker": "^5.1.0",
+    "react-native-image-picker": "^5.3.1",
     "react-native-image-view": "^2.1.9",
+    "react-native-image-viewing": "^0.2.2",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-modal": "^13.0.1",
     "react-native-reanimated": "~2.12.0",
