--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "expo-secure-store": "~12.0.0",
     "expo-status-bar": "~1.4.2",
     "expo-updates": "^0.15.6",
+    "geolib": "^3.3.3",
     "html-entities": "^2.3.3",
     "lodash": "^4.17.21",
     "lottie-react-native": "^5.1.4",
@@ -46,12 +47,16 @@
     "react-native-checkbox-reanimated": "^0.1.1",
     "react-native-crypto-js": "^1.0.0",
     "react-native-extra-dimensions-android": "^1.2.5",
+    "react-native-fast-image": "^8.6.3",
     "react-native-floating-label-input": "^1.4.2",
     "react-native-gesture-handler": "~2.8.0",
+    "react-native-get-random-values": "^1.8.0",
     "react-native-google-places-autocomplete": "^2.5.1",
+    "react-native-image-modal": "^1.0.16",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-maps": "1.3.2",
     "react-native-maps-directions": "^1.9.0",
+    "react-native-maps-line-arrow": "^0.2.1",
     "react-native-modal": "^13.0.1",
     "react-native-reanimated": "~2.12.0",
     "react-native-render-html": "^6.3.4",
