--- a/app.json
+++ b/app.json
@@ -38,6 +38,12 @@
         {
           "microphonePermission": "Allow DongNaiTravelApp to access your microphone."
         }
+      ],
+      [
+        "expo-image-picker",
+        {
+          "photosPermission": "The app accesses your photos to let you share them with your friends."
+        }
       ]
     ]
   }
