--- a/package.json
+++ b/package.json
@@ -10,11 +10,12 @@
     "lint": "eslint --ext .js,.jsx ./"
   },
   "dependencies": {
-    "@expo/webpack-config": "^0.17.2",
+    "@expo/config-plugins": "^6.0.1",
+    "@expo/webpack-config": "^18.0.1",
     "@gorhom/bottom-sheet": "^4",
     "@ptomasroos/react-native-multi-slider": "^2.2.2",
-    "@react-native-async-storage/async-storage": "~1.17.3",
-    "@react-native-community/datetimepicker": "6.5.2",
+    "@react-native-async-storage/async-storage": "1.17.11",
+    "@react-native-community/datetimepicker": "6.7.3",
     "@react-navigation/bottom-tabs": "^6.5.4",
     "@react-navigation/native": "^6.1.3",
     "@react-navigation/native-stack": "^6.9.8",
@@ -23,33 +24,34 @@
     "buffer": "^6.0.3",
     "crypto-js": "^4.1.1",
     "date-fns": "^2.29.3",
-    "expo": "~47.0.12",
-    "expo-av": "~13.0.3",
-    "expo-constants": "~14.0.2",
-    "expo-file-system": "~15.1.1",
-    "expo-image-picker": "~14.0.2",
-    "expo-location": "~15.0.1",
-    "expo-permissions": "~14.0.0",
-    "expo-secure-store": "~12.0.0",
+    "expo": "^48.0.10",
+    "expo-av": "~13.2.1",
+    "expo-build-properties": "^0.5.2",
+    "expo-constants": "~14.2.1",
+    "expo-file-system": "~15.2.2",
+    "expo-image-picker": "~14.1.1",
+    "expo-location": "~15.1.1",
+    "expo-permissions": "~14.1.1",
+    "expo-secure-store": "~12.1.1",
     "expo-status-bar": "~1.4.2",
-    "expo-updates": "^0.15.6",
+    "expo-updates": "^0.16.4",
     "geolib": "^3.3.3",
     "html-entities": "^2.3.3",
     "lodash": "^4.17.21",
     "lottie-react-native": "5.1.4",
     "moment": "^2.29.4",
     "openrouteservice-js": "^0.2.0",
-    "react": "18.1.0",
-    "react-dom": "18.1.0",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
     "react-hook-form": "^7.43.0",
-    "react-native": "0.70.8",
+    "react-native": "0.71.6",
     "react-native-app-intro-slider": "^4.0.4",
     "react-native-checkbox-reanimated": "^0.1.1",
     "react-native-dropdown-picker": "^5.4.4",
     "react-native-extra-dimensions-android": "^1.2.5",
     "react-native-fast-image": "^8.6.3",
     "react-native-floating-label-input": "^1.4.2",
-    "react-native-gesture-handler": "~2.8.0",
+    "react-native-gesture-handler": "~2.9.0",
     "react-native-get-random-values": "^1.8.0",
     "react-native-google-places-autocomplete": "^2.5.1",
     "react-native-image-modal": "^1.0.16",
@@ -59,9 +61,9 @@
     "react-native-maps": "1.3.2",
     "react-native-maps-line-arrow": "^0.2.1",
     "react-native-modal": "^13.0.1",
-    "react-native-reanimated": "~2.12.0",
-    "react-native-safe-area-context": "4.4.1",
-    "react-native-screens": "~3.18.0",
+    "react-native-reanimated": "~2.14.4",
+    "react-native-safe-area-context": "4.5.0",
+    "react-native-screens": "~3.20.0",
     "react-native-svg": "13.4.0",
     "react-native-toast-notifications": "^3.3.1",
     "react-native-vector-icons": "^9.2.0",
