--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,9 @@
 node_modules/
 .expo/
 dist/
-package-lock.json/
-yarn.lock/
-yarn-error.log/
+package-lock.json
+yarn.lock
+yarn-error.log
 
 npm-debug.*
 *.jks
