--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "expo-constants": "~14.2.1",
     "expo-file-system": "~15.2.2",
     "expo-image-picker": "~14.1.1",
+    "expo-localization": "~14.1.1",
     "expo-location": "~15.1.1",
     "expo-permissions": "~14.1.1",
     "expo-secure-store": "~12.1.1",
@@ -59,7 +60,6 @@
     "react-native-image-viewing": "^0.2.2",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-maps": "1.3.2",
-    "react-native-maps-line-arrow": "^0.2.1",
     "react-native-modal": "^13.0.1",
     "react-native-reanimated": "~2.14.4",
     "react-native-safe-area-context": "4.5.0",
@@ -71,8 +71,8 @@
     "react-redux": "^8.0.5",
     "redux-persist": "^6.0.0",
     "socket.io-client": "^4.6.1",
-    "uuid": "^9.0.0",
-    "expo-localization": "~14.1.1"
+    "typescript": "^4.9.4",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
