--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "expo-constants": "~14.2.1",
     "expo-file-system": "~15.2.2",
     "expo-image-picker": "~14.1.1",
+    "expo-localization": "~14.1.1",
     "expo-location": "~15.1.1",
     "expo-permissions": "~14.1.1",
     "expo-secure-store": "~12.1.1",
@@ -64,15 +65,17 @@
     "react-native-reanimated": "~2.14.4",
     "react-native-safe-area-context": "4.5.0",
     "react-native-screens": "~3.20.0",
+    "react-native-shadow": "^1.2.2",
+    "react-native-shadow-2": "^7.0.7",
     "react-native-svg": "13.4.0",
+    "react-native-swiper": "^1.6.0",
     "react-native-toast-notifications": "^3.3.1",
     "react-native-vector-icons": "^9.2.0",
     "react-native-web": "~0.18.9",
     "react-redux": "^8.0.5",
     "redux-persist": "^6.0.0",
     "socket.io-client": "^4.6.1",
-    "uuid": "^9.0.0",
-    "expo-localization": "~14.1.1"
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
