--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "@ptomasroos/react-native-multi-slider": "^2.2.2",
     "@react-native-async-storage/async-storage": "1.17.11",
     "@react-native-community/datetimepicker": "6.7.3",
-    "@react-native-community/netinfo": "^9.3.9",
+    "@react-native-community/netinfo": "9.3.7",
     "@react-navigation/bottom-tabs": "^6.5.4",
     "@react-navigation/native": "^6.1.3",
     "@react-navigation/native-stack": "^6.9.8",
@@ -27,7 +27,7 @@
     "date-fns": "^2.29.3",
     "expo": "^48.0.10",
     "expo-av": "~13.2.1",
-    "expo-build-properties": "^0.5.2",
+    "expo-build-properties": "~0.6.0",
     "expo-constants": "~14.2.1",
     "expo-file-system": "~15.2.2",
     "expo-image-picker": "~14.1.1",
