Change something (read more in details)

--- a/app.json
+++ b/app.json
@@ -8,11 +8,19 @@
     "userInterfaceStyle": "light",
     "plugins": [
       [
+        "expo-av",
+        {
+          "microphonePermission": "Allow DongNaiTravelApp to access your microphone."
+        }
+      ],
+      [
         "expo-image-picker",
         {
           "photosPermission": "The app accesses your photos to let you share them with your friends."
         }
-      ]
+      ],
+      "expo-localization",
+      "expo-build-properties"
     ],
     "updates": {
       "fallbackToCacheTimeout": 0
@@ -31,14 +39,6 @@
     },
     "web": {
       "favicon": "./app/assets/images/favicon.png"
-    },
-    "plugins": [
-      [
-        "expo-av",
-        {
-          "microphonePermission": "Allow DongNaiTravelApp to access your microphone."
-        }
-      ]
-    ]
+    }
   }
 }
