--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "expo-av": "~13.2.1",
     "expo-build-properties": "~0.6.0",
     "expo-constants": "~14.2.1",
-    "expo-file-system": "~15.2.2",
+    "expo-file-system": "^15.2.2",
     "expo-image-picker": "~14.1.1",
     "expo-localization": "~14.1.1",
     "expo-location": "~15.1.1",
