--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "lottie-react-native": "5.1.4",
     "moment": "^2.29.4",
     "openrouteservice-js": "^0.2.0",
+    "quill-delta-to-markdown": "^0.6.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.43.0",
