--- a/app.json
+++ b/app.json
@@ -3,6 +3,9 @@
     "name": "DongNaiTravelApp",
     "slug": "DongNaiTravelApp",
     "version": "1.0.0",
+    "developer": {
+      "tool": "expo-cli"
+    },
     "orientation": "portrait",
     "icon": "./app/assets/images/icon.png",
     "userInterfaceStyle": "light",
