--- a/package.json
+++ b/package.json
@@ -67,6 +67,8 @@
     "react-native-image-view": "^2.1.9",
     "react-native-image-viewing": "^0.2.2",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
+    "react-native-lightbox": "^0.8.1",
+    "react-native-lightbox-v2": "^0.9.0",
     "react-native-maps": "1.3.2",
     "react-native-modal": "^13.0.1",
     "react-native-reanimated": "~2.14.4",
