--- a/package.json
+++ b/package.json
@@ -88,6 +88,7 @@
     "redux-persist": "^6.0.0",
     "socket.io-client": "^4.6.1",
     "typescript": "^4.9.4",
+    "uniqid": "^5.4.0",
     "uuid": "^9.0.0"
   },
   "devDependencies": {
