--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "expo-constants": "~14.2.1",
     "expo-file-system": "^15.2.2",
     "expo-image-picker": "~14.1.1",
+    "expo-linear-gradient": "^12.1.2",
     "expo-linking": "^4.0.1",
     "expo-localization": "~14.1.1",
     "expo-location": "~15.1.1",
@@ -72,7 +73,7 @@
     "react-native-maps": "1.3.2",
     "react-native-modal": "^13.0.1",
     "react-native-reanimated": "~2.14.4",
-    "react-native-safe-area-context": "4.5.0",
+    "react-native-safe-area-context": "^4.5.0",
     "react-native-screens": "~3.20.0",
     "react-native-shadow": "^1.2.2",
     "react-native-shadow-2": "^7.0.7",
